# stockfish-homonym

./: .gitignore  README.md  environment.yml  pyproject.toml
cpp/: CMakeLists.txt
cpp/include/: platform_execution_engine.h
cpp/include/market/: market.h  order.h  orderbook.h  stock.h  trader.h
cpp/src/: bridge_main.cpp  platform_execution_engine.cpp
cpp/src/market/: main.cpp  market.cpp  order.cpp  orderbook.cpp  stock.cpp  trader.cpp
src/stockfish_homonym/: __init__.py
src/stockfish_homonym/baselines/: __init__.py  twap.py
src/stockfish_homonym/bridge/: __init__.py  build.py
src/stockfish_homonym/configs/: default.yaml
src/stockfish_homonym/env/: __init__.py  platform_execution_env.py
src/stockfish_homonym/eval/: run_eval.py
src/stockfish_homonym/learning/: __init__.py  agent.py  cli_utils.py  experiment.py  hindsight.py
src/stockfish_homonym/learning/envs/: env_utils.py
src/stockfish_homonym/learning/nets/: actor_critic.py  cnn.py  policy_dists.py  traj_encoders.py  tstep_encoders.py
src/stockfish_homonym/train/: __init__.py  amago_train.py  common.py  train_policy.py
src/stockfish_homonym/utils/: __init__.py  repo_paths.py
stockfish_homonym/baselines/: twap.py
stockfish_homonym/bridge/: client.py
stockfish_homonym/eval/: evaluator.py  run_eval.py
stockfish_homonym/learning/: agent.py  loading.py  utils.py
stockfish_homonym/learning/envs/: __init__.py  amago_env.py
stockfish_homonym/learning/nets/: ff.py  transformer.py  utils.py
stockfish_homonym/train/: train_policy.py
stockfish_homonym/utils/: repo_paths.py
tests/: test_bridge.py  test_env.py  test_evaluator.py
